--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/assets/sass/styles.scss"
+              "src/assets/sass/styles.scss",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
               
             ],
             "scripts": []
