--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.0",
     "animate.css": "^4.1.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
